--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+
+
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
@@ -13,7 +17,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+
+
+
 <body>
+
+
+
+
+
+
+  
+
+
   <div class="container">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
       <div class="col-md-3 mb-2 mb-md-0">
@@ -26,9 +42,9 @@
         </a>
 
       </div>
-      <div>
+      <div class="navv">
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 xyz">
           <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
           <li><a href="#" class="nav-link px-2 link-secondary">Testimonials</a></li>
           <li><a href="#" class="nav-link px-2 link-secondary">Pricing</a></li>
@@ -41,6 +57,13 @@
       </div>
     </header>
   </div>
+
+
+
+
+
+
+
 
 
 
