--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 
 
-  <div class="container">
+  <div class="container col-xxl-8">
     <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4">
       <div class="col-md-3 mb-2 mb-md-0">
 
@@ -67,7 +67,7 @@
 
 
 
-  <div class="container col-xxl-8">
+  <div class="container col-xxl-8 hhh">
     <div class="container d-flex justify-content-between hero">
       <div class="d-flex">
         <div class="calculator-container">
@@ -220,13 +220,15 @@
     </p>
 
 
-    <div class="mt-5 send-email">
+    <div class="mt-5 send-email kk">
       <input type="email" placeholder="Enter your email"
         style="border: none; outline: none; flex: 1; padding: 15px 30px; font-size: 18px; border-radius: 50px; color: #4a4a4a;" />
       <button class="subbutton" onmouseover="this.style.backgroundColor='#256a48'"
         onmouseout="this.style.backgroundColor='#2e7d5a'">
         Subscribe
       </button>
+
+
     </div>
     <div class="mt-5 mb-5" style="display: flex; align-items: center; gap: 10px;">
       <img width="30px" src="./images/image.png">
@@ -236,6 +238,11 @@
       </p>
     </div>
   </div>
+
+
+
+
+
   <hr class="mt-5">
   <div class="container"
     style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
